# hashSmasher

./: CMakeLists.txt  README.md
include/: HashSmasher.h
src/: HashSmasher.cpp  main.cpp
test/: genericHashing.cpp
